--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,7 +14,9 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 }
 
-* {
+*,
+::before,
+::after {
 	-webkit-user-select: none;
 	box-sizing: border-box;
 	margin: 0;
